Updating alignment and fix for ie for filters

--- a/Web/careersearchtool/src/theme/filters.less
+++ b/Web/careersearchtool/src/theme/filters.less
@@ -147,6 +147,7 @@
     &__label{
         color: @text-color;
         white-space: nowrap;
+        display: block;
     }
     &__select{
         .ant-select-arrow{
